fix: fix field error spacing issue (#793)

--- a/src/Form/_FormText.scss
+++ b/src/Form/_FormText.scss
@@ -1,6 +1,5 @@
 .pgn__form-text {
   font-size: $small-font-size;
-  display: flex;
   align-items: center;
   .pgn__icon {
     height: 1em;
